# scholars-path

./: .gitignore  README.md  auth.db  exam_score.py  main.py  pyproject.toml  requirements.txt  test_model.py
backend/: PLAN.md  auth.db.bak  main.py  pyproject.toml  requirements.txt  train_productivity_models.py
backend/app/: __init__.py  career_catalog.py  career_services.py  config.py  database.py  deps.py  encryption.py  habits_engine.py  main.py  migrations.py  models.py  productivity_model.py  rate_limiter.py  schemas.py  security.py
backend/app/routers/: auth.py  career_recommendations.py  careers.py  habits.py  profile.py  resources.py
backend/scripts/: auth.db  create_career_module_tables.py  create_career_module_tables.sql  create_habits_tables.py  create_habits_tables.sql  create_users_table.py  create_users_table.sql  recompute_habits_correlations.py  seed_test_users.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_auth_flow_e2e.py  test_career_endpoints.py  test_career_recommendations.py  test_profile_endpoints.py  test_security.py
dataset/: productivity_dataset.md
docs/: auth-deployment-checklist.md  career-demo-script.md  career-mapping.md  career-module-api.md
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
openspec/changes/auth-profile-system/: design.md  proposal.md  tasks.md
openspec/changes/career-goal-module/: design.md  proposal.md  tasks.md
openspec/changes/study-habits-assessment/: design.md  proposal.md  (+1 more)
(+50 files in other folders)
